--- a/HomeStyle.css
+++ b/HomeStyle.css
@@ -149,3 +149,32 @@ ul li:first-child::before {
 .photosnap-fifth button:hover {
     background-color: #4b8f8f; 
 }
+.plus{
+    border: none;
+    background: none;
+    font-size: 35px;
+    color: #5DA4A4;
+}
+.plus:hover {
+    color: #4b8f8f; 
+}
+
+.job-form-popup {
+    position: fixed;       
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0,0,0,0.5); 
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;       
+}
+
+.job-form-container {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    max-width: 400px;
+    width: 90%;
+}
